apps/prod/rick-roll/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rick-roll
  labels:
    toolkit.fluxcd.io/tenant: sre-team
