apps/prod/rick-roll/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: rick-roll
  name: rick-roll
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rick-roll
  template:
    metadata:
      labels:
        io.kompose.service: rick-roll
    spec:
      containers:
        - image: ghcr.io/apoorva64/rick-roll-darknet:latest
          name: rick-roll
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          env: []
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 20
      restartPolicy: Always
