apps/prod/rick-roll/service.yaml

apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: rick-roll
  name: rick-roll
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: rick-roll
